--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminadd/registermultimediaVideo.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminadd/registermultimediaVideo.html
@@ -6,7 +6,7 @@
 	<link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
 	<!--<link th:href="@{/webjars/font-awesome/6.4.2/css/font-awesome.css}" rel="stylesheet">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Home</title>
+	<title>Register Multimedia</title>
 	<style>
 		body,
 		html {
@@ -87,11 +87,11 @@
 					<span th:text="${success}"></span>
 				</div>
 				<div class="mb-3">
-					<label class="form-label">Selecciona el tipo de contenido:</label>
+					<label class="form-label">Select the type of content:</label>
 					<div class="form-check">
 						<input class="form-check-input" type="radio" name="contentType" id="texto" value="texto">
 						<label class="form-check-label" for="texto">
-							Texto
+							Text
 						</label>
 					</div>
 					<div class="form-check">
@@ -105,22 +105,22 @@
 
 				<div id="videoFields">
 					<div class="mb-3">
-						<label class="form-label" for="title_video">Título:</label>
+						<label class="form-label" for="title_video">Title:</label>
 						<input type="text" class="form-control" id="title_video" name="title_video">
 					</div>
 					<div class="mb-3">
-						<label class="form-label" for="video">Enlace del Video:</label>
+						<label class="form-label" for="video">Video's link:</label>
 						<input type="text" class="form-control" id="video" name="video">
 					</div>
 				</div>
 				
-				<label for="idteammultimedia"><strong> Equipo favorito: </strong></label>
+				<label for="idteammultimedia"><strong> Team: </strong></label>
 				<select style="margin-top:1%;" class="form-control" id="idteammultimedia" name="idteammultimedia">
 					<option th:field="*{idteammultimedia}" th:each="team : ${teams}" th:value="${team.id_team}"
 						th:text="${team.name}">Equipo</option>
 				</select>
 				<br>
-				<button type="submit" class="btn btn-primary">Guardar</button>
+				<button type="submit" class="btn btn-primary">Register</button>
 			</form>
 		</div>
 
