--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showusers.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showusers.html
@@ -141,7 +141,7 @@
 							<tr>
 								<th>Name</th>
 								<th>Username</th>
-								<th>Team ID</th>
+								<th>Team</th>
 								<th>Actions</th>
 							</tr>
 						</thead>
