--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminadd/registernewdietist.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminadd/registernewdietist.html
@@ -6,7 +6,7 @@
 	<link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
 	<!--<link th:href="@{/webjars/font-awesome/6.4.2/css/font-awesome.css}" rel="stylesheet">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Home</title>
+	<title>Register Dietist</title>
 	<style>
 		body,
 		html {
@@ -84,22 +84,22 @@
 			<div th:if="${success}" class="alert alert-success" role="alert">
 				<span th:text="${success}"></span>
 			</div>
-			<h2 style="text-align: center; text-decoration:underline;">Registro de Dietista</h2>
+			<h2 style="text-align: center; text-decoration:underline;">Register Dietist</h2>
 			<br>
 			<form th:action="@{/admin/registerusers/newDietist}" th:object="${user}" method="post">
 				<input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 				<div class="form-label-group">
-					<label><strong>Nombre Completo: </strong></label>
+					<label><strong>Full Name: </strong></label>
 					<input type="text" th:field="*{name}" class="form-control" placeholder="Name" name="name"
 						required />
 				</div>
 				<div class="form-label-group">
-					<label><strong>Edad: </strong></label>
+					<label><strong>Age: </strong></label>
 					<input type="number" th:field="*{age}" class="form-control" placeholder="Age" name="age"
 						required />
 				</div>				
 				<div class="form-label-group">
-					<label for="idteam_physio"><strong>Equipo: </strong></label>
+					<label for="idteam_physio"><strong>Team: </strong></label>
 					<select  class="form-control" id="idteam_dietist" name="idteam_dietist">
 						<option th:field="*{idteam_dietist}" th:each="team : ${teams}" th:value="${team.id_team}"
 							th:text="${team.name}">Team</option>
@@ -107,7 +107,7 @@
 				</div>
 				<br>
 				<input class="btn btn-lg btn-primary btn-block text-uppercase" id="boton" type="submit"
-					value="Registrar" />
+					value="Register" />
 			</form>
 		</div>
 		<br>
