--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminadd/registerteam.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminadd/registerteam.html
@@ -6,7 +6,7 @@
 	<link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
 	<!--<link th:href="@{/webjars/font-awesome/6.4.2/css/font-awesome.css}" rel="stylesheet">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Home</title>
+	<title>Register Team</title>
 	<style>
 		body,
 		html {
@@ -87,21 +87,21 @@
 			<div th:if="${error}" class="error-message alert alert-danger" role="alert">
 				<p th:text="${error}"></p>
 			</div>
-			<h2 style="text-align: center; text-decoration:underline;">Registro de Equipo</h2>
+			<h2 style="text-align: center; text-decoration:underline;">Register Team</h2>
 			<br>
 			<form th:action="@{admin/registerNewTeam}" th:object="${team}" method="post" enctype="multipart/form-data">
 				<input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 				<!-- Common fields -->
 				<div class="mb-3">
-					<label for="name" class="form-label">Nombre: </label>
+					<label for="name" class="form-label">Name: </label>
 					<input type="text" class="form-control" id="name" name="name" required>
 				</div>
 				<div class="mb-3">
-					<label for="city" class="form-label">Ciudad:</label>
+					<label for="city" class="form-label">City:</label>
 					<input type="text" class="form-control" id="city" name="city">
 				</div>				
 				<div class="mb-3">
-					<label for="stadium" class="form-label">Estadio:</label>
+					<label for="stadium" class="form-label">Stadium:</label>
 					<input type="text" class="form-control" id="stadium" name="stadium">
 				</div>				
 				<div class="mb-3">
@@ -109,17 +109,17 @@
 					<input type="number" class="form-control" id="capital" name="capital">
 				</div>
 				<div class="mb-3">
-					<label for="occupation" class="form-label">Capacidad estadio:</label>
+					<label for="occupation" class="form-label">Stadium's occupation:</label>
 					<input type="number" class="form-control" id="occupation" name="occupation">
 				</div>
 				<div class="form-label-group">
-					<label for="badge"><strong>Seleccionar Escudo: </strong></label>
+					<label for="badge"><strong>Select badge: </strong></label>
 					<input style="margin-top: 1%;" type="file" id="badgeFile" name="badgeFile"
 						accept=".png, .jpg, .jpeg" onchange="updateHiddenField()" class="form-control">
 				</div>
 				<div><input type="hidden" id="badge" name="badge" th:field="*{badge}"> </div>
 				<br>
-				<button type="submit" class="btn btn-primary">Registrar</button>
+				<button type="submit" class="btn btn-primary">Register</button>
 			</form>
 		</div>
 		<script>
