--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminedit/editdietist.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminedit/editdietist.html
@@ -6,7 +6,7 @@
 	<link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
 	<!--<link th:href="@{/webjars/font-awesome/6.4.2/css/font-awesome.css}" rel="stylesheet">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Edit Physio</title>
+	<title>Edit Dietist</title>
 	<style>
 		body,
 		html {
@@ -110,7 +110,7 @@
 				</div>
 				<br>
 				<input class="btn btn-lg btn-primary btn-block text-uppercase" id="boton" type="submit"
-					value="Editar" />
+					value="Edit" />
 			</form>
 		</div>
 		<br>
