--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminedit/editgame.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminedit/editgame.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Home</title>
+    <title>Edit Game</title>
     <style>
         body, html {
             margin: 0;
@@ -85,41 +85,41 @@
             <div th:if="${error}" class="error-message alert alert-danger" role="alert">
                 <p th:text="${error}"></p>
             </div>
-            <h2 style="text-align: center; text-decoration: underline;">Edit Match</h2>
+            <h2 style="text-align: center; text-decoration: underline;">Edit Game</h2>
             <br>
             <form th:action="@{'/adminedit/updateGame/update/' + ${id}}" th:object="${match}" method="post"
                 enctype="multipart/form-data" onsubmit="concatenateScore()">
                 <input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                 <!-- Common fields -->
                 <div class="form-label-group">
-                    <label for="idLocalTeam"><strong>Equipo 1: </strong></label>
+                    <label for="idLocalTeam"><strong>Team 1: </strong></label>
                     <select class="form-control" id="idLocalTeam" name="idLocalTeam">
                         <option th:field="*{idLocalTeam}" th:each="team : ${teams}" th:value="${team.id_team}"
                             th:text="${team.name}">Team</option>
                     </select>
                 </div>
                 <div class="mb-3">
-                    <label for="score1" class="form-label">Goles Equipo 1:</label>
+                    <label for="score1" class="form-label">Team 1's Goals:</label>
                     <input type="number" class="form-control" id="score1" name="score1">
                 </div>
                 <div class="mb-3">
-                    <label for="idVisitantTeam"><strong>Equipo 2: </strong></label>
+                    <label for="idVisitantTeam"><strong>Team 2: </strong></label>
                     <select class="form-control" id="idVisitantTeam" name="idVisitantTeam">
                         <option th:field="*{idVisitantTeam}" th:each="team : ${teams}" th:value="${team.id_team}"
                             th:text="${team.name}">Team</option>
                     </select>
                 </div>
                 <div class="mb-3">
-                    <label for="score2" class="form-label">Goles Equipo 2:</label>
+                    <label for="score2" class="form-label">Team 2's Goals:</label>
                     <input type="number" class="form-control" id="score2" name="score2">
                 </div>
                 <input type="hidden" id="score" name="score" th:value="*{score}">
                 <div class="mb-3">
-                    <label for="numberGame" class="form-label">Nº Partido:</label>
+                    <label for="numberGame" class="form-label">Nº Game:</label>
                     <input type="number" th:field="*{numberGame}" class="form-control" id="numberGame" name="numberGame" required>
                 </div>
                 <div class="mb-3">
-                    <label for="date" class="form-label">Fecha Partido: (Use este formato (yyyy-MM-dd HH:mm:ss.0000000))</label>
+                    <label for="date" class="form-label">Game Date: (Use this format (yyyy-MM-dd HH:mm:ss.0000000))</label>
                     <input type="text" th:field="*{date}" class="form-control" id="date" name="date" required>
                 </div>
                 <div class="mb-3">
@@ -127,7 +127,7 @@
                     <input type="number" th:field="*{tickets}" class="form-control" id="tickets" name="tickets" required>
                 </div>
                 <br>
-                <button type="submit" class="btn btn-primary">Editar</button>
+                <button type="submit" class="btn btn-primary">Edit</button>
             </form>
         </div>
         <script>
