--- a/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showmatchs.html
+++ b/ProyectoIntegrado-IvanCruzado/src/main/resources/templates/adminshow/showmatchs.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>All Matchs</title>
+	<title>All Games</title>
 	<style>
 		body,
 		html {
@@ -122,7 +122,7 @@
 					<div th:if="${error}" class="error-message alert alert-danger" role="alert">
 						<p th:text="${error}"></p>
 					</div>
-					<h2 style="text-align: center;">All Matches</h2>
+					<h2 style="text-align: center;">All Games</h2>
 					<br>
 					<div class="row align-items-center">	
 								
