--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -3,79 +3,121 @@
 
 <head>
     <meta charset="UTF-8">
+    <style>
+        body,
+        html {
+            margin: 5%;
+            margin-top: 10%;
+            padding: 0;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: "Helvetica", "Arial", sans-serif; /* Estilo claro y legible */
+        }
+
+        .container {
+            padding: 0;
+            width: 100%; /* Ancho completo de la página */
+        }
+
+        img {
+            width: 100%; /* Ocupar todo el ancho del contenedor */
+            height: auto; /* Mantener la proporción de la imagen */
+        }
+
+        /* Estilo del menú */
+        .navbar {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 16px;
+        }
+
+        .navbar a {
+            color: white; /* Cambiar el color de la fuente a blanco para contraste */
+            text-decoration: none; /* Quitar el subrayado */
+            padding: 10px 15px;
+            transition: color 0.3s;
+        }
+
+        .navbar a:hover {
+            color: #ffcc00; /* Color de hover en las opciones del menú */
+        }
+
+        .navbar a:focus {
+            outline: none;
+            box-shadow: none;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light" th:fragment="navbarFragment"
-         style="background-color: rgb(37, 150, 190); width: 100%;">
+    <nav class="navbar navbar-expand-sm navbar-light" th:fragment="navbarFragment">
         <div class="container">
-            <div class="d-flex justify-content-between w-100">
+            <div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
-            <div class="collapse navbar-collapse" id="navbarDropdown">
+            <div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <!-- Mostrar solo para usuarios con rol ADMIN -->
                     <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item dropdown">
-                        <a class="nav-link" href="/admin/registerusers" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false"
-                           style="white-space: nowrap; color: white;">
+                        <a class="nav-link" href="/admin/registerusers" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false" style="white-space: nowrap;">
                             Register
                         </a>
-                        
                     </li>
                     <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
-						<a class="nav-link" href="/admin/registerteam"
-							style="white-space: nowrap; color: white;">Register Team</a>
-					</li>
-					<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
-						<a class="nav-link" href="/admin/editusers" style="white-space: nowrap; color: white;">Edit</a>
-					</li>
-					<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
-						<a class="nav-link" href="/admin/registermultimedia" style="white-space: nowrap; color: white;">Redact New</a>
-					</li>
-					
-					<li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
-						<a class="nav-link" href="/adminshow/showMultimedias" style="white-space: nowrap; color: white;">Edit New</a>
-					</li>
+                        <a class="nav-link" href="/admin/registerteam" style="white-space: nowrap;">Register Team</a>
+                    </li>
+                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+                        <a class="nav-link" href="/admin/editusers" style="white-space: nowrap;">Edit</a>
+                    </li>
+                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+                        <a class="nav-link" href="/admin/registermultimedia" style="white-space: nowrap;">Redact New</a>
+                    </li>
+                    <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+                        <a class="nav-link" href="/adminshow/showMultimedias" style="white-space: nowrap;">Edit New</a>
+                    </li>
+
                     <!-- Elementos siempre visibles -->
                     <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
-                        <a class="nav-link" href="/home/yourteam" style="white-space: nowrap; color: white;">Your Team</a>
+                        <a class="nav-link" href="/home/yourteam" style="white-space: nowrap;">Your Team</a>
                     </li>
                     <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
-                        <a class="nav-link" href="/home/aboutus" style="white-space: nowrap; color: white;">About us</a>
+                        <a class="nav-link" href="/home/aboutus" style="white-space: nowrap;">About us</a>
                     </li>
                     <li sec:authorize="!hasRole('ROLE_ADMIN')" class="nav-item active">
-                        <a class="nav-link" href="/home/contactus"
-                           style="white-space: nowrap; color: white;">Contact</a>
+                        <a class="nav-link" href="/home/contactus" style="white-space: nowrap;">Contact</a>
                     </li>
 
                     <!-- Elementos para usuarios no autenticados -->
                     <li sec:authorize="!isAuthenticated()" class="nav-item">
-                        <a class="nav-link" th:href="@{/auth/registerForm}" style="white-space: nowrap; color: white;">
+                        <a class="nav-link" th:href="@{/auth/registerForm}" style="white-space: nowrap;">
                             <span class="fa fa-user"></span> Sign up
                         </a>
                     </li>
                     <li sec:authorize="!isAuthenticated()" class="nav-item">
-                        <a class="nav-link" th:href="@{/auth/login}" style="white-space: nowrap; color: white;">
+                        <a class="nav-link" th:href="@{/auth/login}" style="white-space: nowrap;">
                             <span class="fa fa-sign-in"></span> Login
                         </a>
                     </li>
 
                     <!-- Elementos para usuarios autenticados -->
                     <li sec:authorize="isAuthenticated()" class="nav-item">
-                        <a class="nav-link" th:text="${usuario}" style="white-space: nowrap; color: white;"></a>
+                        <a class="nav-link" th:text="${usuario}" style="white-space: nowrap;"></a>
                     </li>
                     <li sec:authorize="hasRole('ROLE_USER')" class="nav-item active">
                         <a class="nav-link editar" type="submit" href="/home/editUser"
-                           style="color: white; height: 50px; width: 105px;">Edit Profile</a>
+                           style="height: 50px; width: 105px;">Edit Profile</a>
                     </li>
                     <li sec:authorize="isAuthenticated()" class="nav-item">
                         <form th:action="@{/logout}" method="post">
                             <button class="btn btn-link fa fa-sign-in" type="submit"
-                                    style="color: white; width: 105px; margin-top: 5px; margin-left: -15px;">Logout
+                                    style="width: 105px; margin-top: 5px; margin-left: -15px;">Logout
                             </button>
                         </form>
                     </li>
@@ -83,10 +125,8 @@
             </div>
         </div>
     </nav>
-    <!-- Enlace a Bootstrap JS y Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 
+    
 </body>
 
 </html>
