--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -65,7 +65,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <!-- Mostrar solo para usuarios con rol ADMIN -->
                     <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item dropdown">
-                        <a class="nav-link" href="/admin/registerusers" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link" href="/admin/showDrinks" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false" style="white-space: nowrap;">
                             Drinks
                         </a>
